crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__one_of_const_discriminator_draft4.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"oneOf\":[{\"properties\":{\"k\":{\"const\":\"a\"}},\"required\":[\"k\"],\"type\":\"object\"},{\"properties\":{\"k\":{\"const\":\"b\"}},\"required\":[\"k\"],\"type\":\"object\"}]}"
expression: code
---
{
            let mut matched = match instance {
                serde_json::Value::Object(obj) => obj.contains_key("k"),
                _ => false,
            };
            (if match instance {
                serde_json::Value::Object(obj) => obj.contains_key("k"),
                _ => false,
            } {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }) && matched
        }
