crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__one_of_discriminator_int.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"oneOf\":[{\"properties\":{\"code\":{\"const\":1},\"data\":{\"type\":\"string\"}},\"required\":[\"code\"],\"type\":\"object\"},{\"properties\":{\"code\":{\"const\":2},\"payload\":{\"type\":\"number\"}},\"required\":[\"code\"],\"type\":\"object\"}]}"
expression: is_valid_body(schema)
---
{
            let __one_of_discriminator = match instance {
                serde_json::Value::Object(obj) => {
                    obj.get("code")
                        .and_then(|value| {
                            value
                                .as_i64()
                                .or_else(|| {
                                    value
                                        .as_f64()
                                        .and_then(|float| {
                                            (float.fract() == 0.0
                                                && float >= -9_223_372_036_854_775_808.0_f64
                                                && float < 9_223_372_036_854_775_808.0_f64)
                                                .then_some(float as i64)
                                        })
                                })
                        })
                }
                _ => None,
            };
            let mut matched = (matches!(__one_of_discriminator, Some(1i64))
                && {
                    match instance {
                        serde_json::Value::Object(obj) => {
                            obj.iter()
                                .all(|(key, instance)| {
                                    let key_str = key.as_str();
                                    match key_str {
                                        "code" => true,
                                        "data" => instance.is_string(),
                                        _ => true,
                                    }
                                })
                        }
                        _ => false,
                    }
                });
            (if (matches!(__one_of_discriminator, Some(2i64))
                && {
                    match instance {
                        serde_json::Value::Object(obj) => {
                            obj.iter()
                                .all(|(key, instance)| {
                                    let key_str = key.as_str();
                                    match key_str {
                                        "code" => true,
                                        "payload" => instance.is_number(),
                                        _ => true,
                                    }
                                })
                        }
                        _ => false,
                    }
                })
            {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }) && matched
        }
