crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__one_of_discriminator_string.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"oneOf\":[{\"properties\":{\"kind\":{\"const\":\"circle\"},\"radius\":{\"type\":\"number\"}},\"required\":[\"kind\"],\"type\":\"object\"},{\"properties\":{\"kind\":{\"const\":\"square\"},\"side\":{\"type\":\"number\"}},\"required\":[\"kind\"],\"type\":\"object\"}]}"
expression: is_valid_body(schema)
---
{
            let __one_of_discriminator = match instance {
                serde_json::Value::Object(obj) => {
                    obj.get("kind").and_then(serde_json::Value::as_str)
                }
                _ => None,
            };
            let mut matched = (matches!(__one_of_discriminator, Some("circle"))
                && {
                    match instance {
                        serde_json::Value::Object(obj) => {
                            obj.iter()
                                .all(|(key, instance)| {
                                    let key_str = key.as_str();
                                    match key_str {
                                        "kind" => true,
                                        "radius" => instance.is_number(),
                                        _ => true,
                                    }
                                })
                        }
                        _ => false,
                    }
                });
            (if (matches!(__one_of_discriminator, Some("square"))
                && {
                    match instance {
                        serde_json::Value::Object(obj) => {
                            obj.iter()
                                .all(|(key, instance)| {
                                    let key_str = key.as_str();
                                    match key_str {
                                        "kind" => true,
                                        "side" => instance.is_number(),
                                        _ => true,
                                    }
                                })
                        }
                        _ => false,
                    }
                })
            {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }) && matched
        }
