crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__one_of_enum_discriminator.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"oneOf\":[{\"properties\":{\"k\":{\"enum\":[\"a\",\"b\"]}},\"required\":[\"k\"],\"type\":\"object\"},{\"properties\":{\"k\":{\"enum\":[\"c\",\"d\"]}},\"required\":[\"k\"],\"type\":\"object\"}]}"
expression: is_valid_body(schema)
---
{
            let __one_of_discriminator = match instance {
                serde_json::Value::Object(obj) => {
                    obj.get("k").and_then(serde_json::Value::as_str)
                }
                _ => None,
            };
            let mut matched = (matches!(__one_of_discriminator, Some("a" | "b"))
                && {
                    match instance {
                        serde_json::Value::Object(obj) => true,
                        _ => false,
                    }
                });
            (if (matches!(__one_of_discriminator, Some("c" | "d"))
                && {
                    match instance {
                        serde_json::Value::Object(obj) => true,
                        _ => false,
                    }
                })
            {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }) && matched
        }
